Fix hero size on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -566,7 +566,7 @@ a[target]:after {
   background-size: cover;
   display: flex;
   flex-direction: column;
-  height: 80vh;
+  height: 75vh;
   justify-content: flex-end;
   padding: 0 1em 1em;
 }
